samples/_failures_safe/1761610898_ed2674_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_194844df.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_194844df.c:188:9: error: expected declaration or statement at end of input
  188 |         if (!queue_dequeue(q, &current)) {
      |         ^~
./samples/SAFE/__tmp_194844df.c:188:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_194844df.c:188:9: error: expected declaration or statement at end of input
